Fix slight image misalignment, remove bold fonts

--- a/_assets/scss/partials/_images.scss
+++ b/_assets/scss/partials/_images.scss
@@ -32,8 +32,8 @@ picture img {
 
 .imgbleed {
   @media (min-width: 600px) {
-    width: 150%;
-    margin-left: -25%;
+    width: 152%;
+    margin-left: -26%;
   }
 }
 
